# coding_agent_session_search

./: Cargo.toml
.github/workflows/: release.yml
src/: bookmarks.rs  lib.rs
src/analytics/: query.rs  validate.rs
src/indexer/: mod.rs
src/pages/: analytics.rs  export.rs  secret_scan.rs  size.rs  summary.rs
src/search/: model_manager.rs  query.rs  vector_index.rs
src/storage/: sqlite.rs
src/ui/: analytics_charts.rs  app.rs
