[package]
name = "coding-agent-search"
version = "0.2.0"
edition = "2024"
authors = ["Jeffrey Emanuel"]
description = "Unified TUI search over local coding agent histories"
license-file = "LICENSE"
resolver = "2"
repository = "https://github.com/Dicklesworthstone/coding_agent_session_search"
default-run = "cass"

[dependencies]
anyhow = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "fmt", "ansi"] }
asupersync = { version = "0.2.0", path = "../asupersync", features = ["test-internals"] }
clap = { version = "*", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "*"
clap_mangen = "*"
indicatif = "*"
console = "*"
colored = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toon = { version = "0.2.0", path = "../toon_rust", package = "tru" }
tempfile = "*"
rmp-serde = "*"  # MessagePack for binary metadata serialization (Opt 3.1)
toml = "*"
directories = "*"
which = "*"
shell-words = "*"
dotenvy = "*"
notify = "*"
rusqlite = { version = "*", features = ["bundled", "modern_sqlite"] }
# FrankenSQLite foundation for staged storage migration (bead 300hj).
# Keep rusqlite side-by-side during transition; migration code opts in explicitly.
frankensqlite = { version = "*", package = "fsqlite", path = "../frankensqlite/crates/fsqlite", features = ["fts5"] }
rayon = "*"
crossbeam-channel = "*"
parking_lot = "*"
lru = "*"
rustc-hash = "*"  # Fast non-cryptographic hashing for cache keys (P1 Opt 1.3), replaces unmaintained fxhash
smallvec = "*"  # Stack-allocated small vectors for hot paths (Opt 4.4)
regex = "*"
reqwest = { version = "*", default-features = false, features = ["json", "rustls", "blocking", "multipart"] }
portable-pty = "*"
# FrankenTUI migration foundation (bead 2noh9.2.1).
# Strategy: pin a Git revision for reproducible CI builds.
ftui = { version = "0.2.0", path = "../frankentui/crates/ftui" }
ftui-runtime = { version = "0.2.0", path = "../frankentui/crates/ftui-runtime", features = ["native-backend", "crossterm-compat"] }
ftui-tty = { version = "0.2.0", path = "../frankentui/crates/ftui-tty" }
ftui-extras = { version = "0.2.0", path = "../frankentui/crates/ftui-extras", default-features = false, features = ["markdown", "syntax", "charts", "canvas", "theme", "clipboard", "clipboard-fallback", "export", "visual-fx", "forms", "validation", "help"] }
dirs = "*"
walkdir = "*"
glob = "*"
base64 = ">=0.21"
blake3 = "*"
mime_guess = "*"
pulldown-cmark = { version = "*", default-features = false, features = ["html"] }
chrono = { version = "*", features = ["serde"] }
semver = "*"
tracing-appender = "*"
strsim = "*"
once_cell = "*"
syntect = "*"
itertools = "*"
crc32fast = "*"
unicode-normalization = "*"
urlencoding = "*"
half = { version = "*", features = ["bytemuck"] }
memmap2 = "*"
bytemuck = "*"
fastembed = { version = "*", default-features = false, features = ["ort-download-binaries"] }
frankensearch = { version = "0.1.0", path = "../frankensearch/frankensearch", default-features = false, features = ["hash", "lexical", "ann", "fastembed-reranker"] }
franken-agent-detection = { version = "0.1.0", path = "../franken_agent_detection", features = ["connectors", "cursor", "chatgpt", "opencode"] }
wide = "*"  # Portable SIMD for P0 Opt 2: SIMD dot product
arrayvec = "*"  # Stack-based arrays for P1 Opt 1.4: Edge N-gram optimization
bloomfilter = "*"  # Probabilistic membership testing for P2 Opt 3.3: Workspace Cache
hnsw_rs = "*"  # Opt 9: Approximate Nearest Neighbor with HNSW
ouroboros = "*"  # Safe self-referential wrapper for HNSW loader lifetime

# Crypto for ChatGPT encrypted conversations and HTML export encryption
aes-gcm = "*"
ring = "*"
pbkdf2 = "*"  # PBKDF2 key derivation for Web Crypto compatible HTML export encryption

# SHA256 hashing for model verification
sha2 = "*"
hex = "*"

# Interactive terminal prompts for setup wizard
dialoguer = "*"

# SFTP fallback for sync when rsync is unavailable
ssh2 = "*"
argon2 = "*"
hkdf = "*"
zeroize = { version = "*", features = ["derive"] }
flate2 = "*"
rand = "0.10"

# QR code generation (optional, for recovery secret QR codes)
qrcode = { version = "*", optional = true }
image = { version = "*", optional = true, default-features = false, features = ["png"] }
unicode-width = "0.2.2"

# macOS keychain access (optional, for ChatGPT decryption)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "*"

[features]
default = ["qr", "encryption"]
qr = ["dep:qrcode", "dep:image"]
encryption = []  # Enables HTML export encryption (deps already included for ChatGPT)
backtrace = []

[build-dependencies]
vergen = { version = "*", default-features = false, features = ["build", "cargo"] }

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
insta = { version = "*", features = ["yaml", "json"] }
criterion = "*"
once_cell = "*"
serial_test = "*"
proptest = "*"
serde_yaml = "*"
rand = "0.10"
rand_chacha = "0.10"
# frankensqlite compat gate tests (bead 3vvqa) — fsqlite-types needed for SqliteValue
# enum variants in test assertions. The main fsqlite dep is available as `frankensqlite`.
fsqlite-types = { version = "0.1.1", path = "../frankensqlite/crates/fsqlite-types" }

[[bin]]
name = "cass"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

# Optimized build with symbols for profiling (perf/flamegraphs).
# Usage: RUSTFLAGS="-C force-frame-pointers=yes" cargo build --profile profiling
[profile.profiling]
inherits = "release"
debug = true
strip = false

[workspace.metadata.dist]
targets = ["x86_64-unknown-linux-gnu"]
installers = ["shell", "powershell"]
ci = ["github"]

[[bench]]
name = "index_perf"
harness = false

[[bench]]
name = "runtime_perf"
harness = false

[[bench]]
name = "search_perf"
harness = false

[[bench]]
name = "crypto_perf"
harness = false

[[bench]]
name = "db_perf"
harness = false

[[bench]]
name = "export_perf"
harness = false

[[bench]]
name = "cache_micro"
harness = false

[[bench]]
name = "regex_cache"
harness = false

[[bench]]
name = "integration_regression"
harness = false

[[test]]
name = "docs"
path = "tests/docs/mod.rs"

[[test]]
name = "upgrade"
path = "tests/upgrade/mod.rs"

[[test]]
name = "recovery"
path = "tests/recovery/mod.rs"
